don't do that, it removes this from [[:Category:Dutch articles]] among other things.```` <het#3804405>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -17,8 +17,8 @@ By abbreviation.
 ==Dutch==
 
 ===Article===
-
-'''het''' ''n''
+{{infl|nl|article|g=n}}
+'''het'''
 
 # [[the]] {{i|the neuter definite article}}
 #: '''''het''' boek'' &mdash; '''the''' book
