--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -172,6 +172,7 @@ Shortned form of ''[[penalty]]''
 # [[penalty]]
 
 [[Category:1000 English basic words]]
+[[Category:Writing instruments]]
 
 ----
 
