--- a/en/傉/傉.11161.wikitext
+++ b/en/傉/傉.11161.wikitext
@@ -1,16 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一女戈 (OMVI)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.230|dkj=00943|dj=0240.080|hdz=10202.020|uh=5089|ud=20617}}
+* {{Han ref|kx=0112.230|dkj=00943|dj=0240.080|hdz=10202.020|uh=5089|ud=20617}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[rù]] ([[ru4]])|wg=ju<sup>4</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:傉]]
