--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -118,3 +118,6 @@ Old English ''[[sūcan]]''
 [[tr:suck]]
 [[uk:suck]]
 [[zh:suck]]
+
+== Suck overview ==
+An example of suck is " Go Suck your dick".
