--- a/en/愝/愝.15664.wikitext
+++ b/en/愝/愝.15664.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9101<sub>4</sub>|canj=心尸日女 (PSAV)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0395.190|dkj=10950|dj=0733.030|hdz=42326.080|uh=611D|ud=24861|bh=D94C|bd=55628}}
+* {{Han ref|kx=0395.190|dkj=10950|dj=0733.030|hdz=42326.080|uh=611D|ud=24861|bh=D94C|bd=55628}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǎn]] ([[yan3]])|wg=yen<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愝]]
