--- a/en/昣/昣.16971.wikitext
+++ b/en/昣/昣.16971.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日人竹竹 (AOHH)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0493.040|dkj=13842|dj=0856.050|hdz=21502.060|uh=6623|ud=26147}}
+* {{Han ref|kx=0493.040|dkj=13842|dj=0856.050|hdz=21502.060|uh=6623|ud=26147}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しん]] (shin)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[しん]] (shin)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǔn]] ([[chun3]]), [[zhěn]] ([[zhen3]])|wg=ch'un<sup>3</sup>, chen<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昣]]
