--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -8,6 +8,6 @@ From the name of the British comedy troupe, [[Monty Python]], and due to the typ
 
 # (of [[humour]]) [[surreal]] or [[absurd]]
 
-===See also===
+====External links====
 * {{pedialite|Monty Python}}
 * {{pedialite|Monty Python's Flying Circus}}
