--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=9902<sub>7</sub>|canj=心火月口 (PFBR)}}
+
 # {{defn|Han|sort=心08}}
+
 ====References====
-{{Han ref|kx=0391.120|dkj=10815|dj=0725.240|hdz=42315.020|uh=60DD|ud=24797|bh=D55C|bd=54620}}
+* {{Han ref|kx=0391.120|dkj=10815|dj=0725.240|hdz=42315.020|uh=60DD|ud=24797|bh=D55C|bd=54620}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chong2, tong2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō), [[とう]] (tō)|kun=[[うつとりする]] (utsutorisuru)}}
+* {{ja-readings|on=[[しょう]] (shō), [[とう]] (tō)|kun=[[うつとりする]] (utsutorisuru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=창|eumhun=|rv=chang|mr=ch'ang|y=chang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tǎng]] ([[tang3]])|wg=t'ang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惝]]
