--- a/en/昉/昉.16945.wikitext
+++ b/en/昉/昉.16945.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6002<sub>7</sub>|canj=日卜竹尸 (AYHS)}}
+
 # bright dawn, daybreak
 # [[appear]]
+
 ====References====
-{{Han ref|kx=0491.040|dkj=13796|dj=0852.120|hdz=21496.020|uh=6609|ud=26121|bh=CCC4|bd=52420}}
+* {{Han ref|kx=0491.040|dkj=13796|dj=0852.120|hdz=21496.020|uh=6609|ud=26121|bh=CCC4|bd=52420}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fong2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ほう]] (hō)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[ほう]] (hō)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=방|eumhun=|rv=bang|mr=pang|y=pang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fǎng]] ([[fang3]])|wg=fang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昉]]
