* before Han ref <偿#3827665>

--- a/en/偿/偿.11151.wikitext
+++ b/en/偿/偿.11151.wikitext
@@ -1,24 +1,31 @@
 {{see|償}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人火月戈 (OFBI)}}
+
 # [[repay]], [[recompense]]
 # [[restitution]]
+
 ====References====
-{{Han ref|kx=0112.071|hdz=10189.070|uh=507F|ud=20607}}
+* {{Han ref|kx=0112.071|hdz=10189.070|uh=507F|ud=20607}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=seung4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=償|pin=[[cháng]] ([[chang2]])|wg=ch'ang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:偿]]
