--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -197,8 +197,8 @@ From English ''[[brig]]''.
 ===Noun===
 {{fr-noun|m}}
 
-# {{nautical}} [[brig]]
-# ≈ [[fritter]] (but with a filling)
+# {{nautical}} [[brig|Brig]].
+# A [[fritter]] with a filling.
 
 [[ar:brick]]
 [[de:brick]]
