--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -135,7 +135,9 @@
 #: ''All that was left after the fire was the '''brick''' chimney''.
 
 ====Derived terms====
+*[[brick in]]
 *[[brick shithouse]]
+*[[brick up]]
 
 ====Translations====
 {{trans-top|made of brick}}
