--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -152,8 +152,14 @@
 ===Verb===
 {{en-verb}}
 
+# To construct with bricks.
+#* '''1904''', Thomas Hansom Cockin, ''An Elementary Class-Book of Practical Coal-Mining'', C. Lockwood and Son, page 78
+#*: If the ground is strong right up to the surface, a few yards are usually sunk and '''bricked''' before the engines and pit top are erected<!-- ;-->
+#* '''1914''', ''The Mining Engineer'', Institution of Mining Engineers, page 349
+#*: The shaft was next bricked between the decks until the top scaffold was 
+supported by the brickwork and [made] to share the weight with the prids.
 # To make into bricks.
-#* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal
+#* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal, page 66
 #*: The plant, which is here described, for '''bricking''' fine ores and flue dust, was designed and the plans produced in the engineering department of the Selby smelter.
 # {{slang}} To hit someone using a brick.
 # {{rfv-sense}} {{slang}} To be in a high state of anxiety: "Bricking it"
