--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -27,18 +27,19 @@
 * [[brickie]]
 * [[bricks and mortar]]
 * [[bricks and clicks]]
-* [[bricklayer]]
+* [[brick shithouse]]
 {{rel-mid4}}
+* [[bricklayer]]
 * [[drop a brick]]
 * [[hit the bricks]]
 * [[like a cat on a hot brick]]
-* [[like a ton of bricks]]
 {{rel-mid4}}
+* [[like a ton of bricks]]
 * [[make bricks without straw]]
 * [[make bricks without straws]]
 * [[run into a brick wall]]
-* [[shit a brick]]
 {{rel-mid4}}
+* [[shit a brick]]
 * [[shit bricks]]
 * [[take to the bricks]]
 * [[talk to a brick wall]]
