/* Translations */ +trans table, checked hu <spelt#3832832>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -30,12 +30,12 @@
 # A type of [[wheat]], ''Triticum aestivum spelta''
 
 =====Translations=====
-{{top}}
+{{trans-top|a type of wheat, Triticum aestivum spelta}}
 *Dutch: [[spelt]]
 *German: [[Dinkel]] {{m}}
-{{mid}}
-*{{ttbc|Hungarian}}: [[tönköly]] [[búza]]
-{{bottom}}
+{{trans-mid}}
+*Hungarian: {{t|hu|tönkölybúza}}
+{{trans-bottom}}
 
 ----
 
