--- a/en/愑/愑.15653.wikitext
+++ b/en/愑/愑.15653.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心弓月尸 (PNBS)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0394.290|dkj=10927|dj=0731.040|hdz=42332.100|uh=6111|ud=24849}}
+* {{Han ref|kx=0394.290|dkj=10927|dj=0731.040|hdz=42332.100|uh=6111|ud=24849}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[みつる]] (mitsuru), [[いかる]] (ikaru)}}
+* {{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[みつる]] (mitsuru), [[いかる]] (ikaru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愑]]
