--- a/en/傓/傓.11173.wikitext
+++ b/en/傓/傓.11173.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人竹尸一 (OHSM), 人戈尸一 (OISM)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0113.150|dkj=00961|dj=0241.050|hdz=10206.060|uh=5093|ud=20627}}
+* {{Han ref|kx=0113.150|dkj=00961|dj=0241.050|hdz=10206.060|uh=5093|ud=20627}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せん]] (sen)|kun=[[さかん]] (sakan)}}
+* {{ja-readings|on=[[せん]] (sen)|kun=[[さかん]] (sakan)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=선|rv=seon|mr=sŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chéng]] ([[cheng2]]), [[shàn]] ([[shan4]])|wg=ch'eng<sup>2</sup>, shan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傓]]
