--- a/en/愺/愺.15693.wikitext
+++ b/en/愺/愺.15693.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心廿日十 (PTAJ)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.440|dkj=11021|dj=0735.320|hdz=42326.050|uh=613A|ud=24890}}
+* {{Han ref|kx=0396.440|dkj=11021|dj=0735.320|hdz=42326.050|uh=613A|ud=24890}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cǎo]] ([[cao3]])|wg=ts'ao<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愺]]
