--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -4,36 +4,38 @@
 /ˌjʊəɹəˈpiːən/
 
 ===Adjective===
-'''European'''
+{{en-adj}}
 
 # Related to [[Europe]] or, the European Union.
 
-===Related terms===
+====Derived terms====
 * [[European Central Bank]]
+* [[European Commission]]
+* [[European Commissioner]]
+* [[European Union]]
 
 ====Translations====
-{{rfc-level|Translations at L4+ not in L3 POS section (AutoFormat would have corrected level of Related terms)}}
-{{top}}
-*[[Catalan]]: [[europeu]] {{m}}, [[europea]] {{f}}
+{{trans-top|related to Europe or the European Union}}
+* [[Catalan]]: [[europeu]] {{m}}, [[europea]] {{f}}
 * Czech: [[evropský]] {{m}}
-*Dutch: [[Europees]]
-*Esperanto: [[eŭropa]]
-*Estonian: [[euroopa]]
-*Finnish: [[eurooppalainen]]
-*French: [[européen]] {{m}}, [[européenne]] {{f}}
-*[[Frisian]]: [[Europeesk]]
-*German: [[europäisch]]
-*[[Interlingua]]: [[europee]]
-{{mid}}
-*Italian: [[europeo]] {{m}}, [[europea]] {{f}}
-*Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
-*Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
-*Polish: [[europejski]] {{m}}, [[europejska]] {{f}}
-*Portuguese: [[europeu]] {{m}}, [[europeia]] {{f}}
-*Spanish: [[europeo]]
-*Swedish: [[europeisk]]
-*Welsh: [[Ewropeaidd]]
-{{bottom}}
+* Dutch: [[Europees]]
+* Esperanto: [[eŭropa]]
+* Estonian: [[euroopa]]
+* Finnish: [[eurooppalainen]]
+* French: [[européen]] {{m}}, [[européenne]] {{f}}
+* [[Frisian]]: [[Europeesk]]
+* German: [[europäisch]]
+* [[Interlingua]]: [[europee]]
+{{trans-mid}}
+* Italian: [[europeo]] {{m}}, [[europea]] {{f}}
+* Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
+* Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
+* Polish: [[europejski]] {{m}}, [[europejska]] {{f}}
+* Portuguese: [[europeu]] {{m}}, [[europeia]] {{f}}
+* Spanish: [[europeo]]
+* Swedish: [[europeisk]]
+* Welsh: [[Ewropeaidd]]
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun}}
@@ -41,27 +43,27 @@
 # Person living or originating from [[Europe]], or sometimes only [[European Union]].
 
 ====Translations====
-{{top}}
-*[[Catalan]]: [[europeu]] {{m}} [[europea]] {{f}}
+{{trans-top|person}}
+* [[Catalan]]: [[europeu]] {{m}} [[europea]] {{f}}
 * Czech: [[Evropan]] {{m}}
-*Dutch: [[Europeaan]]
-*Esperanto: [[Eŭropano]]
-*Estonian: [[eurooplane]]
-*Finnish: [[eurooppalainen]]
-*French: [[Européen]] {{m}}, [[Européenne]] {{f}}
-*[[Frisian]]: [[Europeaan]]
-{{mid}}
-*German: [[Europäer]] {{m}}, [[Europäerin]] {{f}}
-*[[Interlingua]]: [[europeo]]
-*Italian: [[europeo]] {{m}}, [[europea]] {{f}}
-*Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin)
-*Polish: [[Europejczyk]] {{m}}, [[Europejka]] {{f}}
-*Portuguese: [[europeu]] {{m}}, [[europeia]] {{f}}
-*Romanian: [[european]] {{m}}, [[europeană]] {{f}}
-*Spanish: [[europeo]]
-*Swedish: [[europé]] {{c}}
-*Welsh: [[Ewropead]]
-{{bottom}}
+* Dutch: [[Europeaan]]
+* Esperanto: [[Eŭropano]]
+* Estonian: [[eurooplane]]
+* Finnish: [[eurooppalainen]]
+* French: [[Européen]] {{m}}, [[Européenne]] {{f}}
+* [[Frisian]]: [[Europeaan]]
+{{trans-mid}}
+* German: [[Europäer]] {{m}}, [[Europäerin]] {{f}}
+* [[Interlingua]]: [[europeo]]
+* Italian: [[europeo]] {{m}}, [[europea]] {{f}}
+* Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin)
+* Polish: [[Europejczyk]] {{m}}, [[Europejka]] {{f}}
+* Portuguese: [[europeu]] {{m}}, [[europeia]] {{f}}
+* Romanian: [[european]] {{m}}, [[europeană]] {{f}}
+* Spanish: [[europeo]]
+* Swedish: [[europé]] {{c}}
+* Welsh: [[Ewropead]]
+{{trans-bottom}}
 
 [[ar:European]]
 [[fr:European]]
