--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -26,7 +26,7 @@
 *Hungarian: [[Cseh Köztársaság]]
 *[[Interlingua]]: [[Republica Chec]]
 *Italian: la [[repubblica Ceca]] {{f}}
-*Japanese: {{t|ja|チェコ共和国|tr=Cheko-kyōwakoku|sc=Jpan}}({{Jpan|ちぇこきょうわこく}})
+*Japanese: {{t|ja|チェコ|tr=Cheko|sc=Jpan}}, {{t|ja|チェコ共和国|tr=Cheko-kyōwakoku|sc=Jpan}}({{Jpan|ちぇこきょうわこく}})
 *Korean: [[체코 공화국]] (cheko gong-hwaguk)
 *Kurdish: [[Komara Çêkiyayê]]
 {{trans-mid}}
