--- a/en/惽/惽.15633.wikitext
+++ b/en/惽/惽.15633.wikitext
@@ -1,22 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心口心日 (PRPA)}}
+
 # [[confused]]
+
 ====References====
-{{Han ref|kx=0393.110|dkj=10875|dj=0729.110|hdz=42332.040|uh=60FD|ud=24829}}
+* {{Han ref|kx=0393.110|dkj=10875|dj=0729.110|hdz=42332.040|uh=60FD|ud=24829}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こん]] (kon), [[びん]] (bin)|kun=}}
+* {{ja-readings|on=[[こん]] (kon), [[びん]] (bin)|kun=}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hūn]] ([[hun1]])|wg=hun<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惽]]
