/* Translations */ <Czech Republic#3858943>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -33,7 +33,7 @@
 *Latvian: [[Čehijas Republika]] {{f}}
 *[[Luxembourgish]]: [[Tschechesch Republik]]
 *Maltese: ir-[[Repubblika Ċeka]]
-*Norwegian: [[Den tsjekkiske republikk]]
+*Norwegian: [[Tsjekkia]], [[Den tsjekkiske republikk]]
 *Persian: {{FAchar|[[جمهوری چک]]}}
 *Polish: [[Republika Czeska]] {{f}}
 *Portuguese: [[República Checa]]
