--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9402<sub>7</sub>|canj=心大一月 (PKMB)}}
+
 # [[indolent]], [[careless]], [[lazy]], [[idle]]
+
 ====References====
-{{Han ref|kx=0392.210|dkj=10855|dj=0728.070|hdz=42326.110|uh=60F0|ud=24816|bh=B46B|bd=46187}}
+* {{Han ref|kx=0392.210|dkj=10855|dj=0728.070|hdz=42326.110|uh=60F0|ud=24816|bh=B46B|bd=46187}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=do6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[だ]] (da)|kun=[[おこたる]] (okotaru)}}
+* {{ja-readings|on=[[だ]] (da)|kun=[[おこたる]] (okotaru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=타|eumhun=|rv=ta|mr=t'a|y=tha}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[duò]] ([[duo4]])|wg=to<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惰]]
