--- a/en/偄/偄.11090.wikitext
+++ b/en/偄/偄.11090.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人一月大 (OMBK)}}
+
 # weak
+
 ====References====
-{{Han ref|kx=0109.230|dkj=00831|dj=0233.120|hdz=10188.070|uh=5044|ud=20548}}
+* {{Han ref|kx=0109.230|dkj=00831|dj=0233.120|hdz=10188.070|uh=5044|ud=20548}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[だん]] (dan), [[なん]] (nan)|kun=[[よわい]] (yowai)}}
+* {{ja-readings|on=[[だん]] (dan), [[なん]] (nan)|kun=[[よわい]] (yowai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[난]], [[연]]|rv=nan, yeon|mr=nan, yŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[nuàn]] ([[nuan4]])|wg=nuan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偄]]
