Replace cf by compare <blond#3868231>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,7 +5,7 @@
 * [[blonde]] (US)
 
 ===Etymology===
-: from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (cf. Old English "''blonden''feax" - ''grey''-haired).
+: from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (compare Old English "''blonden''feax" - ''grey''-haired).
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
