Replace cf by compare <flesh#3868877>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old High German]] "''fleisk''".
+Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old High German]] "''fleisk''".
 
 ===Pronunciation===
 *{{audio|en-us-flesh.ogg|Audio (US)}}
