--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -27,6 +27,8 @@
 ===Kanji===
 {{ja-kanji|grade=2|rs=土03}}
 
+# [[earth]]; [[ground]]
+
 ====Readings====
 * {{ja-readings|on=[[ち]] (chi), [[じ]] (ji)|kun=[[つち]] (tsuchi)}}
 
@@ -45,7 +47,15 @@
 ===Noun===
 {{ja-noun|k|hira=ち|rom=chi}}
 
-# [[earth]] (cf. [[地球]] [[Earth]])
+# [[earth]]; [[land]]; [[ground]]
+# a [[place]]; a [[region]]; a piece of land
+# [[territory]]; [[dominion]]
+# (of a crate, etc) the [[bottom]]
+
+{{ja-noun|k|hira=じ|rom=ji|hhira=ぢ}}
+
+# [[earth]]; [[dirt]]
+# {{game of go|lang=ja|skey=し'}} [[territory]]
 
 ----
 
