--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -14,7 +14,7 @@ Old English ''[[sūcan]]''
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # To draw into, by any means, with an attractive force, usually without direct contact
 # {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
-# To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
+# To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation. "''[[Dylan sucks cock.]]''
 
 ====Synonyms====
 * (3, 4 above) To [[blow]]
