--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9108<sub>6</sub>|canj=心一月金 (PMBC), X心一月金 (XPMBC)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.100|dkj=10984|dj=0734.170|hdz=42335.130|uh=6129|ud=24873|bh=DD70|bd=56688}}
+* {{Han ref|kx=0396.100|dkj=10984|dj=0734.170|hdz=42335.130|uh=6129|ud=24873|bh=DD70|bd=56688}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gōng]] ([[gong1]])|wg=kung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愩]]
