--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -28,7 +28,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 *Hungarian: [[Jugoszlávia]]
 *Italian: [[Jugoslavia]], [[Iugoslavia]] {{f}}
 {{mid}}
-*Japanese: [[ユーゴスラヴィア]] (Yūgosuravia)
+*Japanese: {{t|ja|ユーゴスラビア|tr=Yūgosurabia|sc=Jpan}}, {{t|ja|ユーゴスラヴィア|tr=Yūgosuravia|sc=Jpan}}
 *Korean: [[유고슬라비아]] (Yugoseullabia)
 *Maltese: il-[[Jugoslavja]]
 *Polish: [[Jugosławia]] {{f}}
