* before Han ref <显#3885296>

--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -1,23 +1,31 @@
 {{see|顯}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日廿金 (ATC)}}
+
 # [[manifest]], [[display]]
 # [[evident]], [[clear]]
+
 ====References====
-{{Han ref|kx=0494.181|hdz=21499.100|uh=663E|ud=26174}}
+* {{Han ref|kx=0494.181|hdz=21499.100|uh=663E|ud=26174}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hin2}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=顯|pin=[[xiǎn]] ([[xian3]])|wg=hsien<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:显]]
