--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -1,21 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>6</sub>|canj=心一口田 (PMRW), X心一口田 (XPMRW)}}
+
 # [[sincere]], [[honest]]
 # [[depressed]]
+
 ====References====
-{{Han ref|kx=0394.160|dkj=10916|dj=0730.230|hdz=42326.090|uh=610A|ud=24842|bh=D941|bd=55617}}
+* {{Han ref|kx=0394.160|dkj=10916|dj=0730.230|hdz=42326.090|uh=610A|ud=24842|bh=D941|bd=55617}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[まこと]] (makoto)}}
+* {{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[まこと]] (makoto)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bì]] ([[bi4]]), [[qì]] ([[qi4]])|wg=pi<sup>4</sup>, ch'i<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愊]]
