--- a/en/昈/昈.16944.wikitext
+++ b/en/昈/昈.16944.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6300<sub>7</sub>|canj=日竹尸 (AHS), 日戈尸 (AIS)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0491.030|dkj=13795|dj=0852.110|hdz=21496.040|uh=6608|ud=26120|bh=CCC8|bd=52424}}
+* {{Han ref|kx=0491.030|dkj=13795|dj=0852.110|hdz=21496.040|uh=6608|ud=26120|bh=CCC8|bd=52424}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こ]] (ko), [[ご]] (go)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[こ]] (ko), [[ご]] (go)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hù]] ([[hu4]])|wg=hu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昈]]
