--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人山一月 (OUMB)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.330|dkj=00896|dj=0238.070|hdz=10191.090|uh=5073|ud=20595|bh=D465|bd=54373}}
+* {{Han ref|kx=0111.330|dkj=00896|dj=0238.070|hdz=10191.090|uh=5073|ud=20595|bh=D465|bd=54373}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たん]] (tan)|kun=[[ちひさい]] (chihisai), [[すこし]] (sukoshi)}}
+* {{ja-readings|on=[[たん]] (tan)|kun=[[ちひさい]] (chihisai), [[すこし]] (sukoshi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[duān]] ([[duan1]])|wg=tuan<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偳]]
