--- a/en/昛/昛.16963.wikitext
+++ b/en/昛/昛.16963.wikitext
@@ -1,20 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日尸尸 (ASS)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0492.160|dkj=13831|dj=0855.160|hdz=21489.050|uh=661B|ud=26139}}
+* {{Han ref|kx=0492.160|dkj=13831|dj=0855.160|hdz=21489.050|uh=661B|ud=26139}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=거|eumhun=|rv=geo|mr=kŏ|y=ke}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昛]]
