--- a/en/慅/慅.15704.wikitext
+++ b/en/慅/慅.15704.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9703<sub>6</sub>|canj=心水戈戈 (PEII)}}
+
 # [[agitated]]
+
 ====References====
-{{Han ref|kx=0397.210|dkj=11043|dj=0736.140|hdz=42332.120|uh=6145|ud=24901|bh=DD69|bd=56681}}
+* {{Han ref|kx=0397.210|dkj=11043|dj=0736.140|hdz=42332.120|uh=6145|ud=24901|bh=DD69|bd=56681}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[しょう]] (shō)|kun=[[うごく]] (ugoku)}}
+* {{ja-readings|on=[[そう]] (sō), [[しょう]] (shō)|kun=[[うごく]] (ugoku)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[sāo]] ([[sao1]])|wg=sao<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慅]]
