--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4718<sub>2</sub>|canj=土弓人 (GNO)}}
+
 # [[pit]], [[hole]]
 # [[snare]], [[trap]]
 # [[crisis]]
+
 ====References====
-{{Han ref|kx=0225.120|dkj=04928|dj=0460.040|hdz=10425.040|uh=574E|ud=22350|bh=A7A2|bd=42914}}
+* {{Han ref|kx=0225.120|dkj=04928|dj=0460.040|hdz=10425.040|uh=574E|ud=22350|bh=A7A2|bd=42914}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ham2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=[[あな]] (ana)}}
+* {{ja-readings|on=[[かん]] (kan)|kun=[[あな]] (ana)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=감|rv=gam|mr=kam}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kǎn]] ([[kan3]])|wg=k'an<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坎]]
