--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=2133<sub>2</sub>|canj=竹弓心 (HNP)}}
+
 # a fault, mistake, error, transgression
+
 ====References====
-{{Han ref|kx=0393.350|dkj=10900|dj=0730.090|hdz=42322.140|uh=6106|ud=24838|bh=B75E|bd=46942}}
+* {{Han ref|kx=0393.350|dkj=10900|dj=0730.090|hdz=42322.140|uh=6106|ud=24838|bh=B75E|bd=46942}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hin1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken)|kun=[[あやまる]] (ayamaru)}}
+* {{ja-readings|on=[[けん]] (ken)|kun=[[あやまる]] (ayamaru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=건|eumhun=|rv=geon|mr=kŏn|y=ken}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiān]] ([[qian1]])|wg=ch'ien<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愆]]
