--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -1,39 +1,56 @@
 {{see|升}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6044<sub>0</sub>|canj=日竹廿 (AHT)}}
+
 # [[rise]], [[ascent]]
 # [[peaceful]]
 # [[peace]]
+
 ====References====
-{{Han ref|kx=0491.020|dkj=13794|dj=0852.100|hdz=21490.090|uh=6607|ud=26119|bh=AA40|bd=43584}}
+* {{Han ref|kx=0491.020|dkj=13794|dj=0852.100|hdz=21490.090|uh=6607|ud=26119|bh=AA40|bd=43584}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sing1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
 
 ===Kanji===
 {{ja-kanji|grade=c|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō)|kun=[[のぼる]] (noboru)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[のぼる]] (noboru)}}
 
 ====Compounds====
 * [[昇進]] (shōshin)
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=승|eumhun=|rv=seung|mr=sŭng|y=sung}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǐn]] ([[min3]]), [[shēng]] ([[sheng1]])|wg=min<sup>3</sup>, sheng<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昇]]
