--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人田木 (OWD)}}
+
 # bare, naked, uncovered
+
 ====References====
-{{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
+* {{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ら]] (ra), [[か]] (ka), [[げ]] (ge)|kun=[[はだか]] (hadaka), [[せまい]] (semai), [[かたぬぐ]] (katanugu), [[すはだ]] (suhada)}}
+* {{ja-readings|on=[[ら]] (ra), [[か]] (ka), [[げ]] (ge)|kun=[[はだか]] (hadaka), [[せまい]] (semai), [[かたぬぐ]] (katanugu), [[すはだ]] (suhada)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=라|rv=ra|mr=ra}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lèng]] ([[leng4]]), [[líng]] ([[ling2]]), [[luǒ]] ([[luo3]])|wg=leng<sup>4</sup>, ling<sup>2</sup>, lo<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倮]]
