--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -1,37 +1,54 @@
 {{see|座}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=8810<sub>4</sub>|canj=人人土 (OOG)}}
+
 # [[sit]]
 # [[seat]]
 # ride, travel by
 # [archaic] to [[offend]]; to [[violate]] (a decree or law)
 
 ====References====
-{{Han ref|kx=0225.150|dkj=04931|dj=0460.060|hdz=10423.120|uh=5750|ud=22352|bh=A7A4|bd=42916}}
+* {{Han ref|kx=0225.150|dkj=04931|dj=0460.060|hdz=10423.120|uh=5750|ud=22352|bh=A7A4|bd=42916}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cho5, jo6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ざ]] (za)|kun=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
+* {{ja-readings|on=[[ざ]] (za)|kun=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=좌|rv=jwa|mr=chwa}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wù]] ([[wu4]]), [[zuò]] ([[zuo4]])|wg=wu<sup>4</sup>, tso<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坐]]
