--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -1,38 +1,59 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人田中月 (OWLB)}}
+
 # accidentally, coincidently
 # an idol
+
 ====References====
-{{Han ref|kx=0112.010|dkj=00899|dj=0238.090|hdz=10190.030|uh=5076|ud=20598|bh=B0B8|bd=45240}}
+* {{Han ref|kx=0112.010|dkj=00899|dj=0238.090|hdz=10190.030|uh=5076|ud=20598|bh=B0B8|bd=45240}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ngau5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぐう]] (gū), [[ごう]] (gō)|kun=[[たぐい]] (tagui), [[たまたま]] (tamatama)}}
+* {{ja-readings|on=[[ぐう]] (gū), [[ごう]] (gō)|kun=[[たぐい]] (tagui), [[たまたま]] (tamatama)}}
+
 ====Compounds====
 {{top4}}
-*[[偶然]]
+* [[偶然]]
 {{mid4}}
 {{mid4}}
 {{mid4}}
 {{bottom}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=우|rv=u|mr=u}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ǒu]] ([[ou3]]), [[zán]] ([[zan2]])|wg=ou<sup>3</sup>, tsan<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偶]]
