--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -12,6 +12,7 @@ From {{L.}} {{term|lang=la|id est||that is}}.
 '''i.e.'''
 
 # {{rfv-sense}} {{context|initialism}} [[id est]]: That is; in other words; that is to say; in [[essence]].
+# That is.
 #: ''The three U.S. states on the west coast ('''i.e.''' Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
