--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=竹十土 (HJG)}}
+
 # {{defn|Han|sort=土03}}
+
 ====References====
-{{Han ref|kx=0224.120|dkj=04891|hdz=10419.080|uh=5731|ud=22321}}
+* {{Han ref|kx=0224.120|dkj=04891|hdz=10419.080|uh=5731|ud=22321}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[qiān]] ([[qian1]])|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圱]]
