--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>8</sub>|canj=日卜廿 (AYT)}}
+
 # bright light, sunlight
 # [[dazzling]]
+
 ====References====
-{{Han ref|kx=0494.030|dkj=13862|dj=0858.090|hdz=21503.090|uh=6631|ud=26161|bh=AC52|bd=44114}}
+* {{Han ref|kx=0494.030|dkj=13862|dj=0858.090|hdz=21503.090|uh=6631|ud=26161|bh=AC52|bd=44114}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yuk1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[いく]] (iku)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[いく]] (iku)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=욱|eumhun=|rv=uk|mr=uk|y=wuk}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yì]] ([[yi4]]), [[yù]] ([[yu4]])|wg=i<sup>4</sup>, yü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昱]]
