--- a/en/昍/昍.16949.wikitext
+++ b/en/昍/昍.16949.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6600<sub>0</sub>|canj=日日 (AA), X日日 (XAA)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0491.110|dkj=13804|dj=0852.170|hdz=21490.020|uh=660D|ud=26125|bh=CCCC|bd=52428}}
+* {{Han ref|kx=0491.110|dkj=13804|dj=0852.170|hdz=21490.020|uh=660D|ud=26125|bh=CCCC|bd=52428}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken), [[かん]] (kan)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[けん]] (ken), [[かん]] (kan)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xuān]] ([[xuan1]])|wg=hsüan<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昍]]
