--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -19,7 +19,7 @@ From {{L.}} ''[[vomitare]]''.
 {{trans-top|to regurgitate the contents of a stomach}}
 * Armenian: {{t|hy|հետ տալ|sc=Hayeren|xs=Armenian}}, {{t|hy|փսխել|sc=Hayeren|xs=Armenian}}
 * Czech: {{t-|cs|zvracet}}
-* Dutch: {{t+|nl|overgeven}}, {{t|nl|braken]], {{t|nl|kotsen|colloquial}}
+* Dutch: {{t+|nl|overgeven}}, {{t|nl|braken}}, {{t|nl|kotsen}} {{qualifier|colloquial}}
 * Esperanto: {{t-|eo|vomi|xs=Esperanto}}
 * Estonian: {{t-|et|oksendama}}
 * Finnish: {{t+|fi|oksentaa}}
