--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -16,11 +16,11 @@
 #: ''This house is made of '''brick'''''.
 # {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
-# Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
+# {{rfv-sense|Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.}}
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 # {{slang}} An electronic device, especially a heavy box-shaped one, that has been rendered non-functional and, usually, non-repairable.
-# {{colloquial}} a [[mobile phone]], especially one that is large and/or heavy relative to current models
-# {{colloquial}} An external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug.  A [[power brick]].
+# {{informal}} a [[mobile phone]], especially one that is large and/or heavy relative to current models
+# {{informal}} An external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug.  A [[power brick]].
 
 ====Derived terms====
 {{rel-top4|terms derived from brick (noun)}}
@@ -66,7 +66,7 @@
 * German: [[Backstein]], [[Ziegel]] {{m}}
 * Hebrew: {{t-|he|לבנה|sc=Hebr}}
 * Hungarian: {{t+|hu|tégla}}
-* Icelandic: [[múrsteinn]] {{m}}, [[tígulsteinn]] {{m}} (''rare''), [[leirsteinn]] {{m}} (''rare'')
+* Icelandic: [[múrsteinn]] {{m}}, [[tígulsteinn]] {{m}} {{qualifier|rare}}, [[leirsteinn]] {{m}}  {{qualifier|rare}}
 * Indonesian: [[batu bata]]
 * Italian: {{t+|it|mattone}}
 {{trans-mid}}
@@ -98,10 +98,6 @@
 * Latvian: [[ķieģelis]] {{m}}
 * Slovene: {{t+|sl|opeka}}
 * Swedish: {{t-|sv|tegel|n}}
-{{trans-bottom}}
-
-{{trans-top|a missed shot (basketball)}}
-{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|term of endearment}}
