--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -16,7 +16,7 @@
 #: ''This house is made of '''brick'''''.
 # {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
-# {{rfv-sense|Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.}}
+# {{rfv-sense}}Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 # {{slang}} An electronic device, especially a heavy box-shaped one, that has been rendered non-functional and, usually, non-repairable.
 # {{informal}} a [[mobile phone]], especially one that is large and/or heavy relative to current models
