--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Pronunciation===
-* {{enPR|ĭz'rāəl}} or {{AHDchar|ĭz'rēəl}}, {{IPA|/ˈɪzreɪəl/}} or {{IPAchar|/ˈɪzriəl/}}, {{SAMPA|/"IzreI@l/}} or {{SAMPAchar|/"Izri@l/}}
+* {{enPR|ĭz'rāəl|ĭz'rēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/}}; {{SAMPA|/"IzreI@l/|/"Izri@l/}}
 
 ===Etymology===
 Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [[w:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[w:Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[w:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
