--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4111<sub>6</sub>|canj=土一日一 (GMAM)}}
+
 # low wall
+
 ====References====
-{{Han ref|kx=0228.200|dkj=05060|dj=0464.170|hdz=10437.110|uh=57A3|ud=22435|bh=ABAE|bd=43950}}
+* {{Han ref|kx=0228.200|dkj=05060|dj=0464.170|hdz=10437.110|uh=57A3|ud=22435|bh=ABAE|bd=43950}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wun4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
+* {{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=원|rv=won|mr=wŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yuán]] ([[yuan2]])|wg=yüan<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垣]]
