--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -1,139 +1,162 @@
 {{see|萅}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=5060<sub>3</sub>|canj=手大日 (QKA)}}
+
 # [[spring]]
 # [[wanton]]
+
 ====References====
-{{Han ref|kx=0493.060|dkj=13844|dj=0856.070|hdz=21496.100|uh=6625|ud=26149|bh=AC4B|bd=44107}}
+* {{Han ref|kx=0493.060|dkj=13844|dj=0856.070|hdz=21496.100|uh=6625|ud=26149|bh=AC4B|bd=44107}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cheun1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
 
 ===Noun===
-[[Category:1000_Japanese_basic_words|はる]]
 {{ja-noun|k|hira=はる|rom=haru}}
 
-# (''season'') [[spring#Noun|spring]] 
-[[Category:ja:Seasons|はる]]
-[[Category:ja:Calendar terms|はる]]
+# (''season'') [[spring#Noun|spring]]
 
 ===Kanji===
 {{ja-kanji|grade=2|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅん]] ([[shun]])|kun=[[はる]] ([[haru]])}}
+* {{ja-readings|on=[[しゅん]] ([[shun]])|kun=[[はる]] ([[haru]])}}
+
 ====Synonyms====
-*[[春季]] ([[しゅんき]], [[shunki]]): [[spring]]
-*[[春期]] ([[しゅんき]], [[shunki]]): [[spring]]
+* [[春季]] ([[しゅんき]], [[shunki]]): [[spring]]
+* [[春期]] ([[しゅんき]], [[shunki]]): [[spring]]
 
 ====Compounds====
 
-*[[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
-*[[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
-*[[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
-*[[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]):  [[early spring]], [[New Year]]
-*[[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
-*[[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
-*[[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
-*[[春風]] ([[はるかぜ]], [[harukaze]]): spring breeze
-*[[春霞]] ([[はるがすみ]], [[harugasumi]]) springtime haze
-*[[春着]] ([[はるぎ]], [[harugi]]): springwear, New Year's clothes
-*[[春蚕]] ([[はるご]], [[harugo]]): spring breed of silkworms
-*[[春先]] ([[はるさき]], [[harusaki]]): beginning of spring
-*[[春雨]] ([[はるさめ]], [[harusame]]): spring rain, Japanese vermicelli
-*[[春場所]] ([[はるばしょ]], [[harubasho]]): the spring sumo tournament in Osaka
-*[[春繭]] ([[はるまゆ]], [[harumayu]]): the spring cocoon crop
-*[[春休み]] ([[はるやすみ]], [[haruyasumi]]): spring break
-*[[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
-*[[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
-*[[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
+* [[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
+* [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
+* [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
+* [[初春]] ([[はつはる]], [[hatsuharu]], [[しょしゅん]], [[shoshun]]):  [[early spring]], [[New Year]]
+* [[春秋]] ([[しゅんじゅう]], [[shunshū]]): spring and autumn, months and years, Chronicles of Lu
+* [[春秋戦国]] ([[しゅんじゅうせんごく]], [[shunjuusengoku]]): [[Spring and Autumn Period]] and [[Warring States Period]] in China
+* [[春一番]] ([[はるいちばん]]: [[haruichiban]]): first storm of spring
+* [[春風]] ([[はるかぜ]], [[harukaze]]): spring breeze
+* [[春霞]] ([[はるがすみ]], [[harugasumi]]) springtime haze
+* [[春着]] ([[はるぎ]], [[harugi]]): springwear, New Year's clothes
+* [[春蚕]] ([[はるご]], [[harugo]]): spring breed of silkworms
+* [[春先]] ([[はるさき]], [[harusaki]]): beginning of spring
+* [[春雨]] ([[はるさめ]], [[harusame]]): spring rain, Japanese vermicelli
+* [[春場所]] ([[はるばしょ]], [[harubasho]]): the spring sumo tournament in Osaka
+* [[春繭]] ([[はるまゆ]], [[harumayu]]): the spring cocoon crop
+* [[春休み]] ([[はるやすみ]], [[haruyasumi]]): spring break
+* [[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
+* [[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
+* [[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
+
+[[Category:1000 Japanese basic words|はる]]
+[[Category:ja:Calendar terms|はる]]
+[[Category:ja:Seasons|はる]]
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=춘|eumhun=|rv=chun|mr=ch'un|y=chwun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[春冰]]
-*[[春饼]]
-*[[春播]]
-*[[春蚕]]
-*[[春潮]]
-*[[春绸]]
-*[[春肥]]
-*[[春分]]
-*[[春分点]]
-*[[春风]]
-*[[春风得意]]
-*[[春风化雨]]
-*[[春风满面]]
-*[[春耕]]
-*[[春宫]]
-*[[春灌]]
-*[[春光]]
-*[[春寒]]
-*[[春寒料峭]]
-*[[春旱]]
-*[[春华秋实]]
-*[[春化]]
-*[[春画]], [[春画儿]]
-*[[春荒]]
-*[[春晖]]
-*[[春季]] (chūnjì)
-*[[春假]]
-*[[春节]]
-*[[春景]]
-*[[春卷]], [[春卷儿]]
-*[[春困秋乏]]
-*[[春兰]]
-*[[春兰秋菊]]
-*[[春雷]]
-*[[春联]], [[春联儿]]
-*[[春令]]
-*[[春麦]]
-*[[春满人间]]
-*[[春忙]]
-*[[春梦]]
-*[[春牛]]
-*[[春情]]
-*[[春秋]]
-*[[春秋衫]]
-*[[春日]]
-*[[春色]]
-*[[春上]]
-*[[春试]]
-*[[春笋]]
-*[[春天]] (chūntiān)
-*[[春瘟]]
-*[[春捂秋冻]]
-*[[春宵]]
-*[[春小麦]]
-*[[春心]]
-*[[春汛]]
-*[[春药]]
-*[[春意]]
-*[[春蚓秋蛇]]
-*[[春游]]
-*[[春雨]]
-*[[春运]]
-*[[春种]]
-*[[春装]]
+* [[春冰]]
+* [[春饼]]
+* [[春播]]
+* [[春蚕]]
+* [[春潮]]
+* [[春绸]]
+* [[春肥]]
+* [[春分]]
+* [[春分点]]
+* [[春风]]
+* [[春风得意]]
+* [[春风化雨]]
+* [[春风满面]]
+* [[春耕]]
+* [[春宫]]
+* [[春灌]]
+* [[春光]]
+* [[春寒]]
+* [[春寒料峭]]
+* [[春旱]]
+* [[春华秋实]]
+* [[春化]]
+* [[春画]], [[春画儿]]
+* [[春荒]]
+* [[春晖]]
+* [[春季]] (chūnjì)
+* [[春假]]
+* [[春节]]
+* [[春景]]
+* [[春卷]], [[春卷儿]]
+* [[春困秋乏]]
+* [[春兰]]
+* [[春兰秋菊]]
+* [[春雷]]
+* [[春联]], [[春联儿]]
+* [[春令]]
+* [[春麦]]
+* [[春满人间]]
+* [[春忙]]
+* [[春梦]]
+* [[春牛]]
+* [[春情]]
+* [[春秋]]
+* [[春秋衫]]
+* [[春日]]
+* [[春色]]
+* [[春上]]
+* [[春试]]
+* [[春笋]]
+* [[春天]] (chūntiān)
+* [[春瘟]]
+* [[春捂秋冻]]
+* [[春宵]]
+* [[春小麦]]
+* [[春心]]
+* [[春汛]]
+* [[春药]]
+* [[春意]]
+* [[春蚓秋蛇]]
+* [[春游]]
+* [[春雨]]
+* [[春运]]
+* [[春种]]
+* [[春装]]
+
 ----
+
 ==Vietnamese==
+
 ===Han character===
 {{vi-hantu|[[xuân]]}}
+
 # {{defn|Vietnamese}}
 
 [[ast:春]]
