--- a/en/偙/偙.11113.wikitext
+++ b/en/偙/偙.11113.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人卜月月 (OYBB)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.280|dkj=00860|dj=0236.120|hdz=10194.110|uh=5059|ud=20569}}
+* {{Han ref|kx=0110.280|dkj=00860|dj=0236.120|hdz=10194.110|uh=5059|ud=20569}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てい]] (tei), [[たい]] (tai)|kun=[[すぐれる]] (sugureru)}}
+* {{ja-readings|on=[[てい]] (tei), [[たい]] (tai)|kun=[[すぐれる]] (sugureru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dì]] ([[di4]])|wg=ti<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偙]]
