--- a/en/昲/昲.16987.wikitext
+++ b/en/昲/昲.16987.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6502<sub>7</sub>|canj=日中中弓 (ALLN)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0494.040|dkj=13863|dj=0858.100|hdz=21504.050|uh=6632|ud=26162|bh=CEED|bd=52973}}
+* {{Han ref|kx=0494.040|dkj=13863|dj=0858.100|hdz=21504.050|uh=6632|ud=26162|bh=CEED|bd=52973}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fèi]] ([[fei4]]), [[yì]] ([[yi4]])|wg=fei<sup>4</sup>, i<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昲]]
