* before Han ref, * before ja-readings <坒#3984796>

--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -1,27 +1,43 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=2110<sub>4</sub>|canj=心心土 (PPG)}}
+
 # to [[compare]]
 # to [[match]]
 # to [[equal]]
+
 ====References====
-{{Han ref|kx=0226.020|dkj=04933|dj=0461.010|hdz=10422.080|uh=5752|ud=22354|bh=CAAF|bd=51887}}
+* {{Han ref|kx=0226.020|dkj=04933|dj=0461.010|hdz=10422.080|uh=5752|ud=22354|bh=CAAF|bd=51887}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=bei2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ひ]] (hi), [[び]] (bi)|kun=[[きじはし]] (kijihashi)}}
+* {{ja-readings|on=[[ひ]] (hi), [[び]] (bi)|kun=[[きじはし]] (kijihashi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bì]] ([[bi4]])|wg=pi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坒]]
