--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -24,6 +24,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 
 ====Translations====
 {{trans-top|point in the sky vertically above a given position or observer}}
+* Croatian: [[zenit]] {{m}}
 * Czech: {{t+|cs|nadhlavník|m}}
 * Finnish: {{t-|fi|zeniitti}}
 * French: {{t+|fr|zénith|m}}
@@ -36,6 +37,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 {{trans-bottom}}
 
 {{trans-top|peak}}
+* Croatian: [[zenit]] {{m}}
 * Finnish: [[huippu]], [[huipennus]], [[huippukohta]], [[kohokohta]]
 * French: [[zénith]] {{m}}
 * German: {{t-|de|Zenit|m}}
