/* English */ restructured - merged two verb headers into one <clung#4013120>

--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -7,10 +7,11 @@
 ===Verb===
 '''clung'''
 
-# past tense of to [[cling]]
+#{{simple past of|[[cling]]}}
+#{{past participle of|[[cling]]}}
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+====Translations====
+{{trans-top|simple past}}
 * Dutch: [[klampte]]
 * Indonesian:
 ** [[sangkut|menyangkut]]
@@ -18,17 +19,14 @@
 ** [[gantung|bergantung]]
 ** [[gantung|menggantung]]
 ** [[gantung|menggantungkan]]
+{{trans-mid}}
 * Japanese:
 ** [[掛けた]] ([[かけた]], kaketa)
 ** [[ぶら下がった]] ([[ぶらさがった]], burasagatta)
 ** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
+{{trans-bottom}}
 
-===Verb===
-'''clung'''
-
-# past participle of to [[cling]]
-
-===Translations===
+{{trans-top|past participle}}
 * Dutch: [[geklampt]]
 * Indonesian:
 ** [[sangkut|menyangkut]]
@@ -41,6 +39,7 @@
 ** [[gantung|digantung]]
 ** [[gantung|tergantung]]
 ** [[gantung|digantungkan]]
+{{trans-mid}}
 * Japanese:
 ** [[掛けた]] ([[かけた]], kaketa)
 ** [[掛けられる]] ([[かけられる]], kakerareru)
@@ -49,6 +48,7 @@
 ** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
 ** [[ぶら下げられる]] ([[ぶらさげられる]], burasagerareru)
 ** [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
+{{trans-bottom}}
 
 [[el:clung]]
 [[fr:clung]]
