* before Han ref <昗#4018433>

--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜金 (AYC)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0492.121|dkj=13788|hdz=21496.010|uh=6617|ud=26135}}
+* {{Han ref|kx=0492.121|dkj=13788|hdz=21496.010|uh=6617|ud=26135}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zè]] ([[ze4]])|wg=tse<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昗]]
