iwiki +sv <secretary#4022270>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -113,6 +113,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[ru:secretary]]
 [[simple:secretary]]
 [[fi:secretary]]
+[[sv:secretary]]
 [[ta:secretary]]
 [[te:secretary]]
 [[vi:secretary]]
