script template -ARchar +Arab <New Zealand#4025942>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -2,8 +2,8 @@
 {{wikipedia}}
 
 ===Pronunciation===
-*[[RP]]: {{IPAchar|"nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/}}, /<tt>%nju:"zi:l@nd</tt>/
-*(''US''): {{IPAchar|"n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/}}, /<tt>%n(j)u:"zi:l@nd</tt>/
+* [[RP]]: {{IPAchar|"nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/}}, /<tt>%nju:"zi:l@nd</tt>/
+* (''US''): {{IPAchar|"n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/}}, /<tt>%n(j)u:"zi:l@nd</tt>/
 
 ===Etymology===
 From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
@@ -17,64 +17,64 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 
 ====Translations====
 {{top}}
-*Arabic: {{ARchar|[[نيوزيلاندا]]}} (niuzilánda) {{f}}
-*Bosnian: [[Novi Zeland#Bosnian|Novi Zeland]] {{m}}
-*[[Breton]]: [[Zeland-Nevez]]
-*Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
-*Chinese: [[新西蘭]], [[新西兰]] (Xīn Xīlán)
-*Croatian: [[Novi Zeland#Croatian|Novi Zeland]] {{m}}
-*Czech: [[Nový Zéland]] {{m}}
-*Danish: New Zealand
-*Dutch: [[Nieuw-Zeeland]]
-*Esperanto: [[Nov-Zelando]]
-*Estonian: [[Uus-Meremaa]]
-*Finnish: [[Uusi-Seelanti]]
-*French: [[Nouvelle-Zélande]] {{f}}
-*German: [[Neuseeland]] {{n}}
-*Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
-*Hebrew: [[ניו זילנד]] (niu ziland) {{f}}
-*Hungarian: [[Új-Zéland]]
-*Indonesian: [[Selandia Baru]]
-*[[Interlingua]]: [[Nove Zelanda]]
-*Italian: [[Nuova Zelanda]] {{f}}
+* Arabic: {{Arab|[[نيوزيلاندا]]}} (niuzilánda) {{f}}
+* Bosnian: [[Novi Zeland#Bosnian|Novi Zeland]] {{m}}
+* [[Breton]]: [[Zeland-Nevez]]
+* Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
+* Chinese: [[新西蘭]], [[新西兰]] (Xīn Xīlán)
+* Croatian: [[Novi Zeland#Croatian|Novi Zeland]] {{m}}
+* Czech: [[Nový Zéland]] {{m}}
+* Danish: New Zealand
+* Dutch: [[Nieuw-Zeeland]]
+* Esperanto: [[Nov-Zelando]]
+* Estonian: [[Uus-Meremaa]]
+* Finnish: [[Uusi-Seelanti]]
+* French: [[Nouvelle-Zélande]] {{f}}
+* German: [[Neuseeland]] {{n}}
+* Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
+* Hebrew: [[ניו זילנד]] (niu ziland) {{f}}
+* Hungarian: [[Új-Zéland]]
+* Indonesian: [[Selandia Baru]]
+* [[Interlingua]]: [[Nove Zelanda]]
+* Italian: [[Nuova Zelanda]] {{f}}
 {{mid}}
-*Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
-*Korean: [[뉴질랜드]] (nyujillaendeu)
-*Latin: [[Nova Zelandia]] {{f}}
-*Maltese: New Zealand
-*Maori: [[Aotearoa]], [[Niu Tireni]]
-*Norwegian: [[#Norwegian|New Zealand]], [[Ny-Zealand]]
-*Polish: [[Nowa Zelandia]] {{f}}
-*Portuguese: [[Nova Zelândia]] {{f}}
-*Romanian: [[Noua Zeelandă]] {{f}}
-*Russian: [[Новая Зеландия]] (Nóvaja Zelándija) {{f}}
-*Serbian:
-*:Cyrillic: [[Нови Зеланд#Serbian|Нови Зеланд]] {{m}}
-*:Roman: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
-*Slovene: [[Nova Zelandija]] {{f}}
-*Spanish: [[Nueva Zelanda]] {{f}}
-*Swedish: [[Nya Zeeland]]
-*Turkish: [[Yeni Zelanda]]
-*Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}}
-*Welsh: [[Seland Newydd]]
+* Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
+* Korean: [[뉴질랜드]] (nyujillaendeu)
+* Latin: [[Nova Zelandia]] {{f}}
+* Maltese: New Zealand
+* Maori: [[Aotearoa]], [[Niu Tireni]]
+* Norwegian: [[#Norwegian|New Zealand]], [[Ny-Zealand]]
+* Polish: [[Nowa Zelandia]] {{f}}
+* Portuguese: [[Nova Zelândia]] {{f}}
+* Romanian: [[Noua Zeelandă]] {{f}}
+* Russian: [[Новая Зеландия]] (Nóvaja Zelándija) {{f}}
+* Serbian:
+*: Cyrillic: [[Нови Зеланд#Serbian|Нови Зеланд]] {{m}}
+*: Roman: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
+* Slovene: [[Nova Zelandija]] {{f}}
+* Spanish: [[Nueva Zelanda]] {{f}}
+* Swedish: [[Nya Zeeland]]
+* Turkish: [[Yeni Zelanda]]
+* Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}}
+* Welsh: [[Seland Newydd]]
 {{bottom}}
 
 ====Synonyms====
 * [[Maoriland]]
 * [[Land of the Long White Cloud]] - ''(Maori name translated into English)''
 * [[Land of the Long White Shroud]] - ''(Australia, humourous, insulting)''
-*[[Aotearoa]]
-*[[Aotearoa New Zealand]]
-*[[NZ]]
-*[[Enzed]]
+* [[Aotearoa]]
+* [[Aotearoa New Zealand]]
+* [[NZ]]
+* [[Enzed]]
 
 ====Derived terms====
-*[[New Zealand primitive frog]]
-*[[New Zealander]]
-*[[Enzedder]]
+* [[New Zealand primitive frog]]
+* [[New Zealander]]
+* [[Enzedder]]
 
 ===See also===
-*[[Appendix:Countries of the world|Countries of the world]]
+* [[Appendix:Countries of the world|Countries of the world]]
 
 [[Category:Countries]]
 
@@ -88,11 +88,11 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 # [[#English|New Zealand]]
 
 ====Synonyms====
-*[[Ny-Zealand]]
+* [[Ny-Zealand]]
 
 ====Related terms====
-*[[newzealending]], [[newzealander]], [[nyzealending]], [[nyzealender]]
-*[[newzealandsk]], [[nyzealandsk]]
+* [[newzealending]], [[newzealander]], [[nyzealending]], [[nyzealender]]
+* [[newzealandsk]], [[nyzealandsk]]
 
 [[Category:no:Countries]]
 
