--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -151,7 +151,7 @@
 
 [[Category:Colors]]
 [[Category:Yellows]]
-[[Category:Spices and Herbs]]
+[[Category:Spices and herbs]]
 [[Category:Plants]]
 [[Category:Persian derivations]]
 
