script template -FAchar +fa-Arab <pen#4036822>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -108,7 +108,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Korean: [[펜]] (pen)
 * Kurdish: {{KUchar|[[پێنووس]]}}
 * Norwegian: {{t+|no|penn|m}}
-* Persian: {{FAchar|[[قلم]]}} (ghalam)
+* Persian: {{fa-Arab|[[قلم]]}} (ghalam)
 * Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
 * Portuguese: {{t+|pt|caneta|f}}
 * Russian: {{t+|ru|ручка|f|sc=Cyrl}} (rúčka), {{t+|ru|авторучка|f|sc=Cyrl}} (avtorúčka), {{t+|ru|перо|n|sc=Cyrl}} (peró)
