script template -KMchar +Khmr <fight#4044094>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -61,7 +61,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Icelandic: [[slást]], [[berjast]]
 * Italian: {{t+|it|lottare}}, {{t-|it|azzuffarsi}}, {{t-|it|battersi}}
 * Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
-* [[Khmer]]: {{KMchar|[[វាយតប់]]}} (wīē-dtop)
+* [[Khmer]]: {{Khmr|[[វាយតប់]]}} (wīē-dtop)
 * Korean: [[다투다]] (datuda), [[싸우다]] (ssauda)
 {{trans-mid}}
 * Kurdish:
@@ -97,7 +97,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Icelandic: [[berjast]]
 {{trans-mid}}
 * Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
-* [[Khmer]]: {{KMchar|[[តស៊ូ]]}} (dtor-sū)
+* [[Khmer]]: {{Khmr|[[តស៊ូ]]}} (dtor-sū)
 * Spanish: {{t-|es|luchar}}
 * Portuguese: {{t-|pt|lutar}}
 {{trans-bottom}}
@@ -123,7 +123,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Italian: {{t+|it|combattere}}
 * Japanese: [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * Korean: [[싸우다]] (ssauda)
-* [[Khmer]]: {{KMchar|[[ប្រយុទ្ឋ]]}} (bprəyŭt)
+* [[Khmer]]: {{Khmr|[[ប្រយុទ្ឋ]]}} (bprəyŭt)
 * Portuguese: [[lutar]] com/contra, [[combater]]
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 {{trans-bottom}}
