/* Translations */ add gender for ga <skirt#4057710>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -123,7 +123,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Hebrew: [[עקף|עָקַף]] {{m}}
 * Hindi: [[स्कर्ट]] (skart.a)
 * Indonesian: [[rok]]
-* Irish: [[sciorta]] {{g|Irish}}
+* Irish: [[sciorta]] {{m}}
 * Italian: [[gonna]] {{f}}
 {{trans-mid}}
 * Latvian: [[stērbele]] {{g|Latvian}}
