--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -21,6 +21,9 @@
 ----
 
 ==Japanese==
+===Noun===
+{{ja-noun|k|hira=たい|rom=tai}}
+# {{grammar|lang=ja|skey=たい}} [[voice]] -  a particular mode of inflecting or conjugating verbs, or a particular form of a verb, by means of which is indicated the relation of the subject of the verb to the action which the verb expresses. 
 
 ===Kanji===
 {{ja-kanji|grade=5|rs=心10}}
