--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -12,6 +12,8 @@
 ====References====
 * {{Han ref|kx=0227.400|dkj=05040|dj=0463.260|hdz=10441.130|uh=5793|ud=22419|bh=ABB2|bd=43954}}
 
+[[Category:Chinese numbers]]
+[[Category:Chinese numerals]]
 ----
 
 ==Cantonese==
