--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -29,6 +29,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * Danish: {{t-|da|skære|alt=skåret}}
 * Finnish: {{t-|fi|leikattu}}
 * French: {{t+|fr|coupé}}, {{t+|fr|coupée}}
+* German: {{t+|de|geschnitten}}
 {{trans-mid}}
 * Hebrew: [[חתוך]] (khatukh) {{m}}, [[חתוכה]] (khatukha) {{f}}
 * Swedish: [[klippt]], [[skuren]]
@@ -36,18 +37,21 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 
 {{trans-top|reduced}}
 * Finnish: {{t-|fi|leikattu}}, {{t|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
+* German: {{t+|de|geschnitten}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|of a gem, carved into a shape}}
 * Danish: [[slibe|slebet]]
 * Finnish: {{t-|fi|hioa|alt=hiottu}}
+* German: {{t+|de|geschnitten}}, {{t+|de|geschliffen}}
 {{trans-bottom}}
 
 {{trans-top|in cricket, played with a horizontal bat}}
 {{trans-bottom}}
 
 {{trans-top|in bodybuilding, having individual groups of muscle fibers stand out}}
+* German: {{t+|de|geschnitten}}
 {{trans-bottom}}
 
 {{trans-top|colloquial: circumcised}}
