--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -132,7 +132,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Czech: {{t-|cs|bojovat}}
 * Danish: [[bekæmpe]]
 * Dutch: {{t|nl|bevechten}}, {{t|nl|bekampen}}
-* Finnish: {{t-|fi|tapella}}, {{t+|fi|taistella}}
+* Finnish: {{t+|fi|taistella}}
 * French: {{t+|fr|combattre}}
 * German: [[bekämpfen]]
 * Greek: {{t+|el|καταπολεμώ|sc=Grek}} (katapolemó)
