/* Translations */ +T template for Greek <Czech Republic#4104115>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -20,7 +20,7 @@
 * Finnish: {{t+|fi|Tšekin tasavalta}}
 * French: la [[République tchèque]] {{f}}
 * German: [[Tschechische Republik]]
-* Greek: [[Δημοκρατία της Τσεχίας]] (Dimokratía tis Tsekhías) {{f}}
+* Greek: {{t|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}}
 * Hebrew: [[הרפובליקה הצ'כית]] (ha'republiqa ha'chekhit)
 * Hindi: [[चेक रिपब्लिक]] (ćik ripablik)
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
