/* Translations */ +ga <straight#4104666>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -74,6 +74,7 @@
 * French: {{t-|fr|comme il faut}}
 * German: {{t-|de|aufrecht}}, {{t|de|aufrichtig}}
 * Hungarian: {{t+|hu|egyenes}}, {{t+|hu|őszinte}}
+* Irish: {{t-|ga|díreach|xs=Irish}}
 {{trans-mid}}
 * Japanese: {{t|ja|実直な|tr=jicchoku na|sc=Jpan}}
 * Polish: {{t+|pl|prosty}}
