* before Han ref, * before ja-readings <垈#4110128>

--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -1,22 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=人心土 (OPG)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.271|dj=0463.150|hdz=10433.010|uh=5788|ud=22408}}
+* {{Han ref|kx=0227.271|dj=0463.150|hdz=10433.010|uh=5788|ud=22408}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たい]] (tai)|kun=[[ぬた]] (nuta), [[ぬま]] (numa)}}
+* {{ja-readings|on=[[たい]] (tai)|kun=[[ぬた]] (nuta), [[ぬま]] (numa)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=대|rv=dae|mr=tae}}
-# {{defn|Korean}}
 
+# {{defn|Korean}}
 
 [[Category:Ghost kanji]]
 
