script template -THchar +Thai, sorted/rebalanced translations <speak#4110240>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -78,9 +78,9 @@
 * Indonesian: [[bicara|berbicara]], [[pidato|berpidato]]
 * [[Interlingua]]: [[parlar]]
 * Italian: {{t+|it|parlare}}
-{{trans-mid}}
 * Japanese: {{t+|ja|話す|tr=hanasu|sc=Jpan}}, {{t-|ja|語る|tr=kataru|sc=Jpan}}, {{t+|ja|言う|tr=iu|sc=Jpan}}
 * Korean: [[말하다]] (malhada)
+{{trans-mid}}
 * Latin: {{t-|la|dicere}}
 * [[Nahuatl]]: [[tlatoa]]
 * Norwegian: {{t-|no|snakke}}
@@ -94,10 +94,10 @@
 * Slovak: [[rozprávať]], [[hovoriť]]
 * Slovene: [[govoriti]] (1, 2, 3, 4, 6)
 * Spanish: {{t+|es|hablar}}
-* Swedish: {{t+|sv|tala}}
 * Swahili: {{t-|sw|ongea|xs=Swahili}}
+* Swedish: {{t+|sv|tala}}
 * [[Tagalog]]: [[magsalita]]
-* Thai: {{THchar|[[พูด]]}} (pôot)
+* Thai: {{Thai|[[พูด]]}} (pôot)
 * [[Tupinambá]]: [[nhe'eng]]
 * Yiddish: [[רעדן]] (redn)
 * [[Zulu]]: [[ukukhuluma]] (ugukuluma)
