Fixing link to [[Appendix:Colours]] (BOT) <saffron#4117415>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -146,7 +146,7 @@
 * [[crocus bag]]
 * [[crocus sack]]
 {{mid3}}
-* [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+* [[Appendix:Colours]]
 {{bottom}}
 
 [[Category:Colors]]
