/* Verb */ link to Verb, templatize link <spelt#4121277>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -13,10 +13,10 @@
 ====Verb====
 '''spelt'''
 
-# {{past of|[[spell]]}}
+# {{past of|[[spell#Verb|spell]]}}
 
 =====Quotations=====
-*'''1590''' — [[w:William Shakespeare|William Shakespeare]], ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
+*'''1590''' — {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
 *:Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt'''<br/>backward with the horn on his head?
 
 ===Etymology 2===
