script template -ARchar +Arab, script template -FAchar +fa-Arab, script template -KMchar +Khmr, script template -THchar +Thai, sorted/rebalanced translations <Germany#4191081>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,11 +2,11 @@
 {{wikipedia}}
 
 ===Pronunciation===
-*British {{IPA|[ˈdʒɜːmənɪ]}}
-*British {{SAMPA|/"dZ3:m@nI/}}
-*US {{IPA|[ˈdʒɝməni]}}
-*US {{SAMPA|/"dZ3`m@ni/}}
-*{{audio|en-uk-germany.ogg|Audio (UK)}}
+* British {{IPA|[ˈdʒɜːmənɪ]}}
+* British {{SAMPA|/"dZ3:m@nI/}}
+* US {{IPA|[ˈdʒɝməni]}}
+* US {{SAMPA|/"dZ3`m@ni/}}
+* {{audio|en-uk-germany.ogg|Audio (UK)}}
 
 ===Proper noun===
 '''Germany''' (''[[countable]] and [[uncountable]]; plural'' '''Germanies''')
@@ -17,110 +17,110 @@
 
 ====Translations====
 {{trans-top|Germany}}
-*[[Afrikaans]]: [[Duitsland]]
-*Arabic: {{ARchar|[[المانيا]]}} (Almánya) {{f}}
-*Armenian: [[Գերմանիա]] (Germania)
-*Bosnian: [[Njemačka]] {{f}}
-*[[Breton]]: [[Alamagn]]
-*[[Catalan]]: [[Alemanya]]
-*[[Cornish]]: [[Almayn]]
-*Chinese: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
-*Czech: [[Německo]] {{n}}
-*Danish: [[Tyskland]] {{n}}
-*Dutch: [[Duitsland]] {{n}}
-*Esperanto: [[Germanio]], [[Germanujo]]
-*Estonian: [[Saksamaa]]
-*Faroese: [[Týskland]] {{n}}
-*Finnish: [[Saksa]]
-*French: [[Allemagne]] {{f}}
-*[[Frisian]]: [[Dútslân]] {{n}}
-*German: [[Deutschland]] {{n}}
-*:Middle High German: [[Tiutschlant]] {{n}}
-*Greek: [[Γερμανία]] (Germanía) {{f}}
-*Hawaiian: [[Kelemānia]]
-*Hebrew: [[גרמניה]] (Germania) {{f}}
-*Hungarian: [[Németország]]
-*Icelandic: [[Þýskaland]] {{n}}
-*Indonesian: [[Jerman]]
-*[[Interlingua]]: [[Germania]]
-*Irish: [[An Ghearmáin]] {{f}}
-*Italian: [[Germania]] {{f}}
-*Japanese: [[ドイツ]], [[独逸]] (Dóitsu)
-*[[Khmer]]: {{KMchar|[[ឤលឺម៉ង់]]}} (āllīmang)
-*Korean: [[독일]] (dogil)
-*Latin: [[Germania]] {{f}}
+* [[Afrikaans]]: [[Duitsland]]
+* Arabic: {{Arab|[[المانيا]]}} (Almánya) {{f}}
+* Armenian: [[Գերմանիա]] (Germania)
+* Bosnian: [[Njemačka]] {{f}}
+* [[Breton]]: [[Alamagn]]
+* [[Catalan]]: [[Alemanya]]
+* Chinese: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
+* [[Cornish]]: [[Almayn]]
+* Czech: [[Německo]] {{n}}
+* Danish: [[Tyskland]] {{n}}
+* Dutch: [[Duitsland]] {{n}}
+* Esperanto: [[Germanio]], [[Germanujo]]
+* Estonian: [[Saksamaa]]
+* Faroese: [[Týskland]] {{n}}
+* Finnish: [[Saksa]]
+* French: [[Allemagne]] {{f}}
+* [[Frisian]]: [[Dútslân]] {{n}}
+* German: [[Deutschland]] {{n}}
+*: Middle High German: [[Tiutschlant]] {{n}}
+* Greek: [[Γερμανία]] (Germanía) {{f}}
+* Hawaiian: [[Kelemānia]]
+* Hebrew: [[גרמניה]] (Germania) {{f}}
+* Hungarian: [[Németország]]
+* Icelandic: [[Þýskaland]] {{n}}
+* Indonesian: [[Jerman]]
+* [[Interlingua]]: [[Germania]]
+* Irish: [[An Ghearmáin]] {{f}}
+* Italian: [[Germania]] {{f}}
+* Japanese: [[ドイツ]], [[独逸]] (Dóitsu)
+* [[Khmer]]: {{Khmr|[[ឤលឺម៉ង់]]}} (āllīmang)
+* Korean: [[독일]] (dogil)
+* Latin: [[Germania]] {{f}}
 {{trans-mid}}
-*Latvian: [[Vācija]] {{f}}
-*Lithuanian: [[Vokietija]] {{f}}
-*[[Livonian]]: [[Saksāmō]]
-*[[Luxembourgish]]: [[Däitschland]] {{n}}
-*Malay: [[Jerman]]
-*Maldivian: [[Jarumanu Vilay]]
-*Maltese: il-[[Ġermanja]] {{f}}
-*[[Manx]]: [[y Ghiarmaan]]
-*Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
-*Old English: [[Þēodiscland]] {{n}}
-*Persian: {{FAchar|[[مملکت المان]]}} (mamlekat Alman)
-*Polish: [[Niemcy]]
-*Portuguese: [[Alemanha]] {{f}}
-*Romanian: [[Germania]] {{f}}
-*Russian: [[Германия]] (Germánija) {{f}}
-*[[Scottish Gaelic]]: A' [[Gearmailt|Ghearmailt]] {{f}}
-*Serbian:
-*:Cyrillic: [[Немачка]] {{f}}
-*:Roman: [[Nemačka]] {{f}}
-*Slovak: [[Nemecko]] {{n}}
-*Slovene: [[Nemčija]] {{f}}
-*Spanish: [[Alemania]] {{f}}
-*Swahili: [[Ujerumani]] ''(noun 6)''
-*Swedish: [[Tyskland]]
-*Thai: {{THchar|[[ชาวเยอรมัน]]}} (chaao yerráman)
-*Turkish: [[Almanya]]
-*Ukrainian: [[Німеччина]] (niméččyna) {{f}}
-*Vietnamese: [[nước Đức]]
-*[[Võro]]: [[S'aksamaa]]
-*Welsh: [[Yr Almaen]] {{f}}
-*[[Xhosa]]: [[iJamani]] ''(noun 5)''
-*Yiddish: [[דײַטשלאַנד]] (Daytshland) {{n}}
+* Latvian: [[Vācija]] {{f}}
+* Lithuanian: [[Vokietija]] {{f}}
+* [[Livonian]]: [[Saksāmō]]
+* [[Luxembourgish]]: [[Däitschland]] {{n}}
+* Malay: [[Jerman]]
+* Maldivian: [[Jarumanu Vilay]]
+* Maltese: il-[[Ġermanja]] {{f}}
+* [[Manx]]: [[y Ghiarmaan]]
+* Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
+* Old English: [[Þēodiscland]] {{n}}
+* Persian: {{fa-Arab|[[مملکت المان]]}} (mamlekat Alman)
+* Polish: [[Niemcy]]
+* Portuguese: [[Alemanha]] {{f}}
+* Romanian: [[Germania]] {{f}}
+* Russian: [[Германия]] (Germánija) {{f}}
+* [[Scottish Gaelic]]: A' [[Gearmailt|Ghearmailt]] {{f}}
+* Serbian:
+*: Cyrillic: [[Немачка]] {{f}}
+*: Roman: [[Nemačka]] {{f}}
+* Slovak: [[Nemecko]] {{n}}
+* Slovene: [[Nemčija]] {{f}}
+* Spanish: [[Alemania]] {{f}}
+* Swahili: [[Ujerumani]] ''(noun 6)''
+* Swedish: [[Tyskland]]
+* Thai: {{Thai|[[ชาวเยอรมัน]]}} (chaao yerráman)
+* Turkish: [[Almanya]]
+* Ukrainian: [[Німеччина]] (niméččyna) {{f}}
+* Vietnamese: [[nước Đức]]
+* [[Võro]]: [[S'aksamaa]]
+* Welsh: [[Yr Almaen]] {{f}}
+* [[Xhosa]]: [[iJamani]] ''(noun 5)''
+* Yiddish: [[דײַטשלאַנד]] (Daytshland) {{n}}
 {{trans-bottom}}
 
 ===See also===
 {{top}}
-*[[Alemania]]
-*[[Alsace|Alsatia]]
-*[[Austria]]
-*[[Bavaria]]
-*[[Appendix:Countries of the world|Countries of the world]]
-*[[Deuts]], [[Deutsch]]
-*[[Deutschland]]
-*[[Diets]], [[Dietsch]]
-*[[Duits]]
-*[[Dutch]]
-*[[East Germany]]
-*[[German Democratic Republic]]
-*[[German Empire]]
-*[[German language]]
-*[[German]], [[Germanic]]
-*[[Germania]]
-*[[Goth]]
+* [[Alemania]]
+* [[Alsace|Alsatia]]
+* [[Austria]]
+* [[Bavaria]]
+* [[Appendix:Countries of the world|Countries of the world]]
+* [[Deuts]], [[Deutsch]]
+* [[Deutschland]]
+* [[Diets]], [[Dietsch]]
+* [[Duits]]
+* [[Dutch]]
+* [[East Germany]]
+* [[German Democratic Republic]]
+* [[German Empire]]
+* [[German language]]
+* [[German]], [[Germanic]]
+* [[Germania]]
+* [[Goth]]
 {{mid}}
-*[[Hun]]
-*[[Liechtenstein]]
-*[[Luxembourg]]
-*[[Luxemburg]]
-*[[Netherlands]]
-*[[Prussia]]
-*[[Reich]], [[Riik]], [[Rick]], [[Rich]], [[Rijk]], [[Rike]], [[Rik]], [[Rig]], [[Riche]], [[Ritch]]
-*[[Saxon]]
-*[[Silesia]]
-*[[Swabia]]
-*[[Switzerland]]
-*[[Teuton]], [[Teutonic]]
-*[[Tirol]]
-*[[Tyskland]]
-*[[Vandal]]
-*[[Weimar Republic]]
-*[[West Germany]]
+* [[Hun]]
+* [[Liechtenstein]]
+* [[Luxembourg]]
+* [[Luxemburg]]
+* [[Netherlands]]
+* [[Prussia]]
+* [[Reich]], [[Riik]], [[Rick]], [[Rich]], [[Rijk]], [[Rike]], [[Rik]], [[Rig]], [[Riche]], [[Ritch]]
+* [[Saxon]]
+* [[Silesia]]
+* [[Swabia]]
+* [[Switzerland]]
+* [[Teuton]], [[Teutonic]]
+* [[Tirol]]
+* [[Tyskland]]
+* [[Vandal]]
+* [[Weimar Republic]]
+* [[West Germany]]
 {{bottom}}
 
 [[Category:Countries]]
