--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -20,6 +20,7 @@ From {{ON.}} [[fljóta]].
 #:''When pouring a new driveway, you can use a two-by-four as a '''float'''.''
 # An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
 #:''That '''float''' covered in roses is very pretty.''
+# {{UK}} A small battery-powered vehicle used for local deliveries, especially in the term [[milk float]].
 # {{finance}} Funds committed to be paid but not yet paid.
 #:''Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.''
 # {{context|finance|AU|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
