--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -95,6 +95,9 @@ Shares offered to the public:
 #:''Oil '''floats''' on vinegar.''
 # {{intransitive}} To drift gently through the air.
 #:''The balloon '''floated''' off into the distance.''
+# {{intransitive}} To drift or wander aimlessly.
+#:''I'm not sure where they went... they're '''floating''' around here somewhere.''
+#:''Images from my childhood '''floated''' through my mind.''
 # {{intransitive}} To move in a particular direction with the liquid in which one is floating
 #:''I'd love to just '''float''' downstream.''
 # {{intransitive}} To move in a fluid manner.
