--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -45,6 +45,7 @@ Shares offered to the public:
 {{trans-top|buoyant device used to support something in liquid}}
 *Dutch: [[vlot]] {{n}}
 *Finnish: [[koho]]
+* German: {{t+|de|Floß|n}}, {{t+|de|Schwimmer|m}} (as in a carburetor)
 {{trans-mid}}
 *Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
 *Lithuanian: [[plaustas]] {{m}} ''raft'', [[plūdė]] {{f}} ''of an angle or a net''
@@ -57,6 +58,7 @@ Shares offered to the public:
 {{trans-bottom}}
 
 {{trans-top|trailer in parade}}
+* German: {{t+|de|Festwagen|m}}
 {{trans-mid}}
 *Russian: [[платформа]] (platfórma) {{f}}
 {{trans-bottom}}
@@ -76,6 +78,7 @@ Shares offered to the public:
 {{trans-top|programming: short form of floating-point number}}
 *Dutch: [[vlottende kommagetal]] {{n}}
 *Finnish: [[liukuluku]]
+* German: {{t+|de|Float|n}}
 {{trans-mid}}
 {{trans-bottom}}
 
