--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -124,6 +124,7 @@ Shares offered to the public:
 * Dutch: [[drijven]]
 * Finnish: [[kellua]]
 * French: [[flotter]]
+* German: {{t+|de|treiben}}, {{t+|de|schwimmen}}, {{t+|de|schweben}}
 * Italian: [[galleggiare]]
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 {{trans-mid}}
@@ -136,6 +137,7 @@ Shares offered to the public:
 * Dutch: [[drijven]]
 * Finnish: [[kellua]], [[pysyä]] [[pinta|pinnalla]]
 * French: [[flotter]]
+* German: {{t+|de|schwimmbar}}
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku)
 {{trans-mid}}
 * Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
@@ -146,6 +148,7 @@ Shares offered to the public:
 {{trans-top|drift gently through the air}}
 * Finnish: [[leijua]]
 * French: [[flotter]]
+* German: {{t+|de|gleiten}}, {{t+|de|schweben}}
 * Japanese: [[飛ぶ]] (tobu), [[浮遊する]] (fuyūsuru), [[浮く]] (uku)
 {{trans-mid}}
 * Russian: [[парить]] (parít') {{impf}}, [[плыть]] (plyt') {{impf}}
@@ -156,6 +159,7 @@ Shares offered to the public:
 * Dutch: [[meedrijven]]
 * Finnish: [[lipua]]
 * French: [[flotter]]
+* German: {{t+|de|treiben}}
 {{trans-mid}}
 * Lithuanian: [[plaukti]] {{impf}}
 * Russian: [[плыть]] (plyt') {{impf}}, [[дрейфовать]] (dr'ejfovát') {{impf}} ''of a ship''
@@ -166,6 +170,7 @@ Shares offered to the public:
 * Dutch: [[vloeien]]
 * Finnish: [[lipua]], [[leijua]]
 * French: [[flotter]]
+* German: {{t+|de|gleiten}}, {{t+|de|schweben}}
 {{trans-mid}}
 * Lithuanian: [[tekėti]] {{impf}}
 * Spanish: [[flotar]]
@@ -188,17 +193,18 @@ Shares offered to the public:
 {{trans-top|propose for consideration}}
 * Dutch: [[te water laten]], [[voorstellen]]
 * Finnish: [[ehdottaa]], [[heittää]]
+* German: {{t+|de|begeben}}
 {{trans-mid}}
 * Japanese: [[浮かぶ]] (ukabu)
 {{trans-bottom}}
 
 {{trans-top|extend a short-term loan to}}
+* German: {{t+|de|borgen}}
 {{trans-mid}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
-* {{ttbc|German}}: [[schwimmen]], [[schweben]]
 * {{ttbc|Ido}}: [[flotacar]]
 * {{ttbc|Mongolian}}: [[хөвөх]] (hövöh)
 * {{ttbc|Spanish}}: [[flotar]]
