Reverted edits by [[Special:Contributions/91.106.58.26|91.106.58.26]] ([[User_talk:91.106.58.26|Talk]]); changed back to last version by [[User:71.187.175.196|71.187.175.196]] <come#4370924>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -73,7 +73,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 * [[Basque]]: [[etorri]]
 * Bavarian: [[kemma]]
 * Bulgarian: [[идвам]] / [[отивам]] (idvam / otivam)
-* Chinese: [[來]], [[来]] ([[lái]])
+* Chinese: [[來]], [[来]] (lái)
 * [[Crimean Tatar]]: [[kelmek]]
 * Czech: [[přijít]]
 * Dutch: [[komen]]
