--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -51,7 +51,7 @@
 * [[Breton]]: [[brav]], [[kaer]]
 * Bulgarian: {{t+|bg|красив|sc=Cyrl}}, {{t+|bg|прекрасен|sc=Cyrl}}
 * [[Catalan]]: [[bell]], [[formós]]
-* Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
+* Chinese: [[漂亮]] ([[piaoliang|piàoliàng]], piao4liang4), [[美]] (měi, [[meili]], mei3li4)
 * Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
 * Dutch: {{t+|nl|mooi}}
 * Esperanto: {{t+|eo|bela|xs=Esperanto}}
