/* Translations */ Added Greek translations (+ transliterations + genders) <United States of America#4432516>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -34,7 +34,7 @@
 * [[Frisian]]: [[Feriene Steaten fan Amearika]]
 * Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
 * German: [[Vereinigte Staaten von Amerika]] {{m|p}}, (''short form'') [[Vereinigte Staaten]] {{m|p}}, [[USA]] {{m|p}} or {{f|s}}
-* Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] {{f|p}}, [[Ηνωμένες Πολιτείες Αμερικής]] {{f|p}}, (''short form'') [[Ηνωμένες Πολιτείες]] {{f|p}}, [[ΗΠΑ]] (eenoménes politíes tis amerikís)
+* Greek: {{t|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}{{t|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t|el|ΗΠΑ|f|p|tr=IPA}} (USA)
 * [[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]]
 * Hawaiian: [['Amelika Huipū'ia]]
 * Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
